<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/iconItem"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/titleIcon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item1"
        android:orderInCategory="1"
        android:title="@string/title1"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/menu_item2"
        android:orderInCategory="2"
        android:title="@string/title2"
        app:showAsAction="never">
        <menu >
            <item
                android:id="@+id/menu_item3_1"
                android:orderInCategory="3"
                android:title="@string/title3_1" />
            <item
                android:id="@+id/menu_item3_2"
                android:orderInCategory="4"
                android:title="@string/title3_2" />
        </menu>
    </item>

</menu>